enum EstadoFoco{
    Encendido,
    Apagado    
};